<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orange Iron</string>
    <string name="action_createUser">Neuen Benutzer erstellen</string>
    <string name="no_user_defined">Klicke oben auf den Button, um einen neuen Benutzer anzulegen!</string>
    <string name="no_server_defined">Klicke oben auf den Button, um einen neuen Server hinzuzufügen!</string>
    <string name="edit_message">Gib etwas ein</string>
    <string name="neu_message">Neu ein</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Meine Meldung XXX</string>
    <string name="hello_world">Hello world!</string>
    <string name="Text1">Statischer Text!</string>
    <string name="Text_Erinnerung">Erinnerung!</string>
    <string name="ButtonFrageStellen">Frage stellen</string>
    <string name="ButtonNeu">Neu</string>
    <string name="ButtonOK">OK</string>
    <string name="ButtonFertig">Fertig</string>
    <string name="title_activity_question">Frage</string>
    <string name="question_button_check">Prüfen</string>
    <string name="question_button_next">Weiter…</string>
    <string name="question_button_main">main</string>
    <string name="question_field_result"></string>
    <string name="question_field_status"></string>
    <string name="question_field_log"></string>
    <string name="main_field_log"></string>
    <string name="title_activity_create_user">Neuen Benutzer erstellen</string>
    <string name="ButtonCreateUser">Benutzer anlegen</string>
    <string name="createUser_field_label">Benutzername:</string>
    <string name="createUser_Username_Hint">Benutzername</string>
    <string name="createUser_button">Erstellen</string>
    <string name="server_popup_explanation">Du hast das Programm zum ersten Mal gestartet. Bitte gib den URL deines Vokablservers an. Anschließend werden die Vokabeln von diesem geladen.</string>
    <string name="save">Speichern</string>
    <string name="load">Laden</string>
    <string name="title_activity_vocabulary_server_config">Server konfigurieren</string>
    <string name="no_valid_server">Fehler: Unter dem angegebenen URL befindet sich kein gültiger Vokabelserver!</string>
    <string name="found_valid_server">Vokabelserver %1$s gefunden. %2$d Lektionen vorhanden. Lade Lektionen.</string>
    <string name="Message_Username_empty">Benutzername darf nicht leer sein.</string>
    <string name="Message_Username_exists">Benutzername ist bereits vergeben.</string>
    <string name="title_activity_lesson_chooser">Lektionen</string>
    <string name="no_lessons_present">Keine Lektionen vorhanden! Konfiguriere einen Vokabelserver um Lektionen herunterzuladen.</string>
    <string name="action_manageServers">Vokabelserver verwalten</string>
    <string name="title_lesson">Lektion:</string>
    <string name="lesson_name_weakest_words">Schwächste Wörter</string>
    <string name="lesson_name_oldest_words">Lange nicht abgefragt</string>
    <string name="action_weakestWords">Schwächste Wörter abfragen</string>
    <string name="action_oldestWords">Lange nicht-abgefragte Wörter abfragen</string>
    <string name="action_addNewServer">Neuen Vokabelserver hinzufügen</string>
    <string name="title_activity_add_vocabulary_server">Neuen Vokabelserver hinzufügen</string>
    <string name="label_url">URL</string>
    <string name="label_server_name">Servername</string>
    <string name="label_server_description">Beschreibung</string>
    <string name="label_server_lessonCount">Lektionsanzahl</string>
    <string name="label_server_details">Serverdetails</string>
    <string name="action_checkForUpdates">Server auf Updates prüfen</string>
    <string name="no_words_in_lesson">Die ausgewählte Lektion enthalt keine Vokabeln. Bitte w�hle eine andere aus!</string>
    <string name="title_activity_learning">Lernmodus</string>
    <string name="action_previousWord">Vorheriges Wort</string>
    <string name="action_nextWord">Nächstes Wort</string>
    <string name="description_button_speak_translation">Liest die Übersetzung vor</string>
    <string name="ButtonTest">Test</string>
    <string name="action_appinfo">Informationen</string>
    <string name="title_activity_app_info">Informationen</string>
    <string name="app_version">Orange Iron Alpha 1</string>

</resources>
