<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createUser_field_label" />

    <EditText
        android:id="@+id/createUser_Username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createUser_Username_Hint"
        android:inputType="text" />

    <Button
        android:id="@+id/createUser_OK"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/createUser_Username"
        android:layout_centerHorizontal="true"
        android:onClick="doCreateUser"
        android:text="@string/ButtonOK" />
</RelativeLayout>