<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/server_url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/label_url" />

    <EditText
        android:id="@+id/server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:inputType="textUri" />

    <Button
        android:id="@+id/button_server_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onLoad"
        android:text="@string/load" />

    <LinearLayout
        android:id="@+id/server_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/server_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:text="@string/label_server_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/server_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/label_server_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/server_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/server_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/label_server_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/server_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/server_server_lessonCount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/label_server_lessonCount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/server_lessonCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_server_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSave"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>