<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <TextView
        android:id="@+id/question_field_top"
        style="@style/TopLine" />

    <TextView
        android:id="@+id/question_field_word"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/question_field_top"
        android:text="@string/hello_world"
        android:textSize="20sp" />

    <View
        android:id="@+id/question_div01"
        style="@style/Divider"
        android:layout_width="300dp"
        android:layout_below="@+id/question_field_word" />
    
        <RadioGroup
        android:id="@+id/answerContainer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question_div01"
        android:textSize="20sp" />

<!--     <Spinner -->
<!--         android:id="@+id/question_spinner_answer" -->
<!--         android:layout_width="300dp" -->
<!--         android:layout_height="50dp" -->
<!--         android:layout_alignParentLeft="true" -->
<!--         android:layout_below="@+id/question_div01" -->
<!--         android:spinnerMode="dropdown" -->
<!--         android:textSize="20sp" /> -->

    <View
        android:id="@+id/question_div02"
        style="@style/Divider"
        android:layout_width="300dp"
        android:layout_below="@+id/answerContainer" />

    <TextView
        android:id="@+id/question_field_result"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/question_div02"
        android:text="@string/question_field_result"
        android:textSize="20sp" />

    <View
        android:id="@+id/question_div03"
        style="@style/Divider"
        android:layout_width="300dp"
        android:layout_below="@+id/question_field_result" />

    <TextView
        android:id="@+id/question_field_status"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@+id/question_div03"
        android:text="@string/question_field_status"
        android:textSize="20sp" />

    <View
        android:id="@+id/question_div04"
        style="@style/Divider"
        android:layout_width="200dp"
        android:layout_below="@+id/question_field_result" />

    <View
        android:id="@+id/question_WhiteLine01"
        style="@style/WhiteLineSpace"
        android:layout_width="200dp"
        android:layout_below="@+id/question_div04" />

    <TextView
        android:id="@+id/question_field_log"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/question_field_word"
        android:maxLines="500"
        android:scrollbars="vertical"
        android:text="@string/question_field_log"
        android:textSize="12sp" />

    <Button
        android:id="@+id/question_button_main"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/question_field_log"
        android:layout_centerHorizontal="false"
        android:layout_toRightOf="@+id/question_field_word"
        android:onClick="doMain"
        android:text="@string/question_button_main" />

</RelativeLayout>